2005-11-27  Grahame Bowland  <grahame@angrygoats.net>

	* automate.cc (automate_certs,automate_keys): use non-exclusive 
	transaction guard
	* commands.cc (ls_certs,ls_keys,cat): use non-exclusive 
	transaction guard
	* database.cc (begin_transaction): used BEGIN DEFERRED (only attempt 
	exclusive lock once a write is attempted on DB) when not exclusive
	(transaction_guard::transaction_guard): new argument exclusive indicating 
	whether an immediate exclusive lock is requested, defaults to true
	* database.hh: update prototype for transaction_guard

2005-11-26  Nathaniel Smith  <njs@pobox.com>

	* UPGRADE: Add note about serve changing syntax.

2005-11-26  Nathaniel Smith  <njs@pobox.com>

	* UPGRADE: Update for 0.24.
	* configure.ac, win32/monotone.iss, monotone.spec:
	* debian/changelog: Bump version number.

2005-11-26  Nathaniel Smith  <njs@pobox.com>

	* ChangeLog: fixup after merge.

2005-11-27  Daniel Carosone  <dan@geek.com.au>

	* monotone.texi, std_hooks.lua: sync hook definitions with
	std_hooks.lua, and group the descriptions into @subsections,
	reordering a few items accordingly.

2005-11-26  Nathaniel Smith  <njs@pobox.com>

	* Makefile.am: Remove botan/{omac,fips_rng}.h.

2005-11-26  Julio M. Merino Vidal  <jmmv@NetBSD.org>

	* AUTHORS, ChangeLog: Update my email address; I don't read the
	other one any more and the new one represents better my limited
	involvement in Monotone.

2005-11-26  Julio M. Merino Vidal  <jmmv@NetBSD.org>

	* configure.ac, Makefile.am, po/Makevars: Avoid using xgettext's
	--flag option on versions that do not support it.

2005-11-26  Grahame Bowland  <grahame@angrygoats.net>

	* automate.cc (automate_stdio) add wrapper function to read()
	so that loops will not wind backwards possibly overrunning buffers
	if an error occurs. Hopefully fixes some of the strange edge cases
	seen using automate. (Closes #15062 in bug tracker)

2005-11-26  Matthew Gregan  <kinetik@orcon.net.nz>
