@@ -11,7 +11,6 @@
 #include <algorithm>
 #include <sstream>
 #include <unistd.h>
-#include <sys/errno.h>
 
 #include <boost/bind.hpp>
 #include <boost/function.hpp>
@@ -1181,14 +1180,9 @@ automate_stdio_read(int d, void *buf, size_t nbytes)
 {
   ssize_t rv;
   
-  /* EINTR occurs if the process receives a signal while in read(); this is 
-     recoverable by simply reading again. 
-  */
-  do {
-    rv = read(d, buf, nbytes);
-  } while (rv == -EINTR);
+  rv = read(d, buf, nbytes);
   
-  E(rv >= 0, F("read from client failed: %s") % strerror(rv));
+  E(rv >= 0, F("read from client failed with error code: %d") % rv);
   return rv;
 }
 
